Created the split

--- a/Ch03/3.1.Keras_APIs.ipynb
+++ b/Ch03/3.1.Keras_APIs.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "<table align=\"left\">\n",
     "    <td>\n",
-    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch03/3.1.Tensorflow_Fundamentals.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch03/3.1.Keras_APIs.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
     "    </td>\n",
     "</table>"
    ]
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: random module is not imported. Setting the seed for random failed\n",
+      "Warning: random module is not imported. Setting the seed for random failed.\n",
       "TensorFlow version: 2.1.0\n"
      ]
     }
@@ -60,6 +60,17 @@
     "\n",
     "import tensorflow.keras.backend as K\n",
     "\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "  # Restrict TensorFlow to only use the first GPU\n",
+    "  try:\n",
+    "    for gpu in gpus:\n",
+    "      tf.config.experimental.set_memory_growth(gpu, True)\n",
+    "  except RuntimeError as e:\n",
+    "    # Visible devices must be set before GPUs have been initialized\n",
+    "    print(e)\n",
+    "\n",
+    "    \n",
     "def fix_random_seed(seed):\n",
     "    \"\"\" Setting the random seed of various libraries \"\"\"\n",
     "    try:\n",
@@ -99,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,12 +202,14 @@
        "44            5.1          3.8          1.9           0.4      0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Section 3.1\n",
+    "\n",
     "import requests\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
@@ -250,80 +263,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: random module is not imported. Setting the seed for random failed\n",
       "Train on 150 samples\n",
       "Epoch 1/25\n",
-      "150/150 [==============================] - 0s 2ms/sample - loss: 1.1773 - acc: 0.2667\n",
+      "150/150 [==============================] - 1s 4ms/sample - loss: 1.1773 - acc: 0.2667\n",
       "Epoch 2/25\n",
-      "150/150 [==============================] - 0s 148us/sample - loss: 1.1388 - acc: 0.2933\n",
+      "150/150 [==============================] - 0s 104us/sample - loss: 1.1388 - acc: 0.2933\n",
       "Epoch 3/25\n",
-      "150/150 [==============================] - 0s 208us/sample - loss: 1.1063 - acc: 0.3000\n",
+      "150/150 [==============================] - 0s 104us/sample - loss: 1.1063 - acc: 0.3000\n",
       "Epoch 4/25\n",
       "150/150 [==============================] - 0s 104us/sample - loss: 1.0752 - acc: 0.3600\n",
       "Epoch 5/25\n",
-      "150/150 [==============================] - 0s 104us/sample - loss: 1.0467 - acc: 0.4667\n",
+      "150/150 [==============================] - 0s 43us/sample - loss: 1.0467 - acc: 0.4667\n",
       "Epoch 6/25\n",
-      "150/150 [==============================] - 0s 43us/sample - loss: 1.0222 - acc: 0.4933\n",
+      "150/150 [==============================] - 0s 104us/sample - loss: 1.0222 - acc: 0.4933\n",
       "Epoch 7/25\n",
       "150/150 [==============================] - 0s 104us/sample - loss: 0.9975 - acc: 0.5733\n",
       "Epoch 8/25\n",
       "150/150 [==============================] - 0s 104us/sample - loss: 0.9757 - acc: 0.6067\n",
       "Epoch 9/25\n",
-      "150/150 [==============================] - 0s 208us/sample - loss: 0.9536 - acc: 0.6400\n",
+      "150/150 [==============================] - 0s 104us/sample - loss: 0.9536 - acc: 0.6400\n",
       "Epoch 10/25\n",
-      "150/150 [==============================] - 0s 148us/sample - loss: 0.9333 - acc: 0.6933\n",
+      "150/150 [==============================] - 0s 104us/sample - loss: 0.9333 - acc: 0.6933\n",
       "Epoch 11/25\n",
-      "150/150 [==============================] - 0s 208us/sample - loss: 0.9116 - acc: 0.7000\n",
+      "150/150 [==============================] - 0s 104us/sample - loss: 0.9116 - acc: 0.7000\n",
       "Epoch 12/25\n",
-      "150/150 [==============================] - 0s 208us/sample - loss: 0.8907 - acc: 0.7067\n",
+      "150/150 [==============================] - 0s 43us/sample - loss: 0.8907 - acc: 0.7067\n",
       "Epoch 13/25\n",
       "150/150 [==============================] - 0s 104us/sample - loss: 0.8687 - acc: 0.7333\n",
       "Epoch 14/25\n",
-      "150/150 [==============================] - 0s 148us/sample - loss: 0.8459 - acc: 0.7400\n",
+      "150/150 [==============================] - 0s 104us/sample - loss: 0.8459 - acc: 0.7400\n",
       "Epoch 15/25\n",
-      "150/150 [==============================] - 0s 208us/sample - loss: 0.8231 - acc: 0.7467\n",
+      "150/150 [==============================] - 0s 0s/sample - loss: 0.8231 - acc: 0.7467\n",
       "Epoch 16/25\n",
       "150/150 [==============================] - 0s 104us/sample - loss: 0.7994 - acc: 0.7467\n",
       "Epoch 17/25\n",
       "150/150 [==============================] - 0s 104us/sample - loss: 0.7762 - acc: 0.7400\n",
       "Epoch 18/25\n",
-      "150/150 [==============================] - 0s 104us/sample - loss: 0.7533 - acc: 0.7333\n",
+      "150/150 [==============================] - 0s 148us/sample - loss: 0.7533 - acc: 0.7333\n",
       "Epoch 19/25\n",
-      "150/150 [==============================] - 0s 148us/sample - loss: 0.7302 - acc: 0.7333\n",
+      "150/150 [==============================] - 0s 104us/sample - loss: 0.7302 - acc: 0.7333\n",
       "Epoch 20/25\n",
       "150/150 [==============================] - 0s 104us/sample - loss: 0.7073 - acc: 0.7400\n",
       "Epoch 21/25\n",
       "150/150 [==============================] - 0s 104us/sample - loss: 0.6855 - acc: 0.7400\n",
       "Epoch 22/25\n",
-      "150/150 [==============================] - 0s 104us/sample - loss: 0.6649 - acc: 0.7333\n",
+      "150/150 [==============================] - 0s 0s/sample - loss: 0.6649 - acc: 0.7333\n",
       "Epoch 23/25\n",
-      "150/150 [==============================] - 0s 148us/sample - loss: 0.6449 - acc: 0.7333\n",
+      "150/150 [==============================] - 0s 0s/sample - loss: 0.6449 - acc: 0.7333\n",
       "Epoch 24/25\n",
-      "150/150 [==============================] - 0s 104us/sample - loss: 0.6254 - acc: 0.7400\n",
+      "150/150 [==============================] - 0s 0s/sample - loss: 0.6254 - acc: 0.7400\n",
       "Epoch 25/25\n",
-      "150/150 [==============================] - 0s 208us/sample - loss: 0.6078 - acc: 0.7400\n"
+      "150/150 [==============================] - 0s 43us/sample - loss: 0.6078 - acc: 0.7400\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1ff49cd1128>"
+       "<tensorflow.python.keras.callbacks.History at 0x20f830673c8>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code listing 2.4\n",
+    "# Section 3.1\n",
+    "# Code listing 3.1\n",
     "\n",
     "from tensorflow.keras.layers import Dense\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -397,14 +410,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: random module is not imported. Setting the seed for random failed\n",
       "Model: \"model\"\n",
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
@@ -432,7 +444,8 @@
     }
    ],
    "source": [
-    "# Code listing 2.5\n",
+    "# Section 3.1\n",
+    "# Code listing 3.2\n",
     "\n",
     "from tensorflow.keras.layers import Input, Dense, Concatenate\n",
     "from tensorflow.keras.models import Model\n",
@@ -549,6 +562,8 @@
     }
    ],
    "source": [
+    "# Section 3.1\n",
+    "\n",
     "# Fitting the model with data\n",
     "model.fit([x, x_pca], y, batch_size=64, epochs=25)"
    ]
@@ -580,6 +595,7 @@
     }
    ],
    "source": [
+    "# Section 3.1\n",
     "import tensorflow as tf\n",
     "tf.keras.utils.plot_model(model, show_shapes=True)"
    ]
@@ -612,11 +628,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code listing 2.6\n",
+    "# Section 3.1\n",
+    "# Code listing 3.3\n",
     "\n",
     "from tensorflow.keras import layers\n",
     "\n",
@@ -662,14 +679,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: random module is not imported. Setting the seed for random failed\n",
       "Model: \"model\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
@@ -690,11 +706,13 @@
     }
    ],
    "source": [
-    "# Code listing 2.7\n",
+    "# Seciton 3.1\n",
+    "# Code listing 3.4\n",
     "\n",
     "from tensorflow.keras.layers import Input, Dense, Concatenate\n",
     "from tensorflow.keras.models import Model\n",
     "import tensorflow.keras.backend as K\n",
+    "import tensorflow as tf\n",
     "\n",
     "K.clear_session() # Making sure we are clearing out the TensorFlow graph\n",
     "\n",
@@ -798,6 +816,7 @@
     }
    ],
    "source": [
+    "# Section 3.1\n",
     "# Fitting the model with data\n",
     "model.fit(x, y, batch_size=64, epochs=25)"
    ]
