--- a/Ch03/3.2.Creating_Input_Pipelines.ipynb
+++ b/Ch03/3.2.Creating_Input_Pipelines.ipynb
@@ -101,6 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 3.2\n",
+    "\n",
     "import os\n",
     "from zipfile import ZipFile\n",
     "\n",
@@ -394,7 +396,8 @@
     }
    ],
    "source": [
-    "# Code listing 2.8\n",
+    "# Section 3.2\n",
+    "# Code listing 3.5\n",
     "\n",
     "import tensorflow as tf\n",
     "import os\n",
@@ -493,6 +496,8 @@
     }
    ],
    "source": [
+    "# Section 3.2\n",
+    "\n",
     "from tensorflow.keras.layers import Dense, Conv2D, Flatten\n",
     "from tensorflow.keras.models import Sequential\n",
     "\n",
@@ -634,7 +639,8 @@
     }
    ],
    "source": [
-    "# Code listing 2.9\n",
+    "# Section 3.2\n",
+    "# Code listing 3.6\n",
     "\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "import os\n",
@@ -845,6 +851,8 @@
     }
    ],
    "source": [
+    "# Section 3.2\n",
+    "\n",
     "import tensorflow_datasets as tfds\n",
     "import tensorflow as tf\n",
     "# See all registered datasets\n",
@@ -895,6 +903,8 @@
     }
    ],
    "source": [
+    "# Section 3.2\n",
+    "\n",
     "import tensorflow_datasets as tfds\n",
     "import tensorflow.keras.backend as K\n",
     "\n",
@@ -1268,6 +1278,8 @@
     }
    ],
    "source": [
+    "# Section 3.2\n",
+    "\n",
     "import tensorflow as tf\n",
     "\n",
     "# Defining a dataset with batch size 16\n",
@@ -1364,6 +1376,8 @@
     }
    ],
    "source": [
+    "# Section 3.2\n",
+    "\n",
     "from tensorflow.keras.layers import Dense, Conv2D, Flatten\n",
     "from tensorflow.keras.models import Sequential\n",
     "\n",
