--- a/Ch04/4.1.Fully_connected_networks.ipynb
+++ b/Ch04/4.1.Fully_connected_networks.ipynb
@@ -83,6 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 4.1\n",
+    "\n",
     "# Loading the data\n",
     "from tensorflow.keras.datasets.mnist import load_data\n",
     "(x_train, y_train), (x_test, y_test) = load_data()"
@@ -106,6 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 4.1\n",
+    "\n",
     "# Some simple preprocessing on the data\n",
     "norm_x_train = ((x_train - 128.0)/128.0).reshape([-1,784])"
    ]
@@ -125,6 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 4.1\n",
+    "\n",
     "# We will extract a small sample from the training data to inspect visually\n",
     "sample_images, sample_labels = [],[]\n",
     "for i, (img, lbl) in enumerate(zip(x_train, y_train)):\n",
@@ -188,6 +194,8 @@
     }
    ],
    "source": [
+    "# Section 4.1\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -261,7 +269,8 @@
     }
    ],
    "source": [
-    "# Code listing 3.1 \n",
+    "# Section 4.1\n",
+    "# Code listing 4.1 \n",
     "\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
@@ -326,6 +335,8 @@
     }
    ],
    "source": [
+    "# Section 4.1\n",
+    "\n",
     "# Generating the corrupted version of norm_x_train to be used as training inputs\n",
     "masked_x_train = generate_masked_inputs(norm_x_train, 0.5, seed=1024)\n",
     "# Fit the model\n",
@@ -370,6 +381,8 @@
     }
    ],
    "source": [
+    "# Section 4.1\n",
+    "\n",
     "# Plotting the loss\n",
     "plt.plot(np.arange(1,11), history.history[\"loss\"])\n",
     "plt.xlabel(\"Epoch\")\n",
@@ -392,6 +405,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 4.1\n",
+    "\n",
     "# We will use the first 10 samples in our dataset to test the model\n",
     "x_train_sample = x_train[:10]\n",
     "y_train_sample = y_train[:10]\n",
@@ -432,6 +447,8 @@
     }
    ],
    "source": [
+    "# Section 4.1\n",
+    "\n",
     "# Plotting the corrupted and restored images side-by-side\n",
     "f, axes = plt.subplots(2, 10, figsize=(18,4))\n",
     "for i, (img, res) in enumerate(zip(masked_x_train_sample, y_pred)):\n",
