--- a/Ch04/4.2.Convolution_networks.ipynb
+++ b/Ch04/4.2.Convolution_networks.ipynb
@@ -91,6 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 4.2\n",
+    "\n",
     "import tensorflow_datasets as tfds\n",
     "# Loading the CIFAR10 dataset\n",
     "data = tfds.load('cifar10')"
@@ -159,6 +161,8 @@
     }
    ],
    "source": [
+    "# Section 4.2\n",
+    "\n",
     "# Let's see the first element in the training set\n",
     "for i in data[\"train\"].take(1):\n",
     "    print(i)"
@@ -192,6 +196,8 @@
     }
    ],
    "source": [
+    "# Section 4.2\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
@@ -262,7 +268,8 @@
     }
    ],
    "source": [
-    "# Code listing 3.2\n",
+    "# Section 4.2\n",
+    "# Code listing 4.3\n",
     "\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
@@ -294,7 +301,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code listing 3.3\n",
+    "# Section 4.2\n",
+    "# Code listing 4.4\n",
     "\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
@@ -391,6 +399,8 @@
     }
    ],
    "source": [
+    "# Section 4.2\n",
+    "\n",
     "import tensorflow as tf\n",
     "\n",
     "def format_data(x, depth):\n",
