--- a/Ch04/4.3.Recurrent_networks.ipynb
+++ b/Ch04/4.3.Recurrent_networks.ipynb
@@ -168,6 +168,8 @@
     }
    ],
    "source": [
+    "# Section 4.3\n",
+    "\n",
     "import pandas as pd\n",
     "import requests\n",
     "import os\n",
@@ -208,6 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 4.3\n",
+    "\n",
     "# Set the date as the index of the dataframe\n",
     "data = data.set_index('Date')"
    ]
@@ -248,6 +252,8 @@
     }
    ],
    "source": [
+    "# Section 4.3\n",
+    "\n",
     "# Plotting the CO2 trend\n",
     "data[[\"Average\"]].plot(figsize=(12,6))"
    ]
@@ -358,6 +364,8 @@
     }
    ],
    "source": [
+    "# Section 4.3\n",
+    "\n",
     "data[\"Average Diff\"] = data[\"Average\"] - data[\"Average\"].shift(1).fillna(method='bfill')\n",
     "data.head()"
    ]
@@ -391,6 +399,8 @@
     }
    ],
    "source": [
+    "# Section 4.3\n",
+    "\n",
     "data[\"Average Diff\"].plot(figsize=(12,6))"
    ]
   },
@@ -423,7 +433,8 @@
     }
    ],
    "source": [
-    "# Code listing 3.5\n",
+    "# Section 4.3\n",
+    "# Code listing 4.5\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -466,6 +477,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 4.3\n",
+    "\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
     "\n",
@@ -555,6 +568,7 @@
     }
    ],
    "source": [
+    "# Section 4.3\n",
     "rnn.fit(x, y, shuffle=True, batch_size=64, epochs=25)"
    ]
   },
@@ -579,7 +593,8 @@
     }
    ],
    "source": [
-    "# Code listing 3.6\n",
+    "# Section 4.3\n",
+    "# Code listing 4.6\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -643,6 +658,8 @@
     }
    ],
    "source": [
+    "# Section 4.3\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
