--- a/Ch05/5.1.Transformer.ipynb
+++ b/Ch05/5.1.Transformer.ipynb
@@ -82,6 +82,8 @@
     }
    ],
    "source": [
+    "# Section 5.2\n",
+    "\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
@@ -125,7 +127,8 @@
     }
    ],
    "source": [
-    "# Code listing 3.7\n",
+    "# Section 5.2\n",
+    "# Code listing 5.1\n",
     "\n",
     "import tensorflow as tf\n",
     "\n",
@@ -210,74 +213,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining the Fully-Connected Layer\n",
-    "\n",
-    "Now let's define the fully-connected sublayer found in the Transformer networks."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 7, 512)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Code listing 3.9\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "class FCLayer(layers.Layer):\n",
-    "    \"\"\" The computations of a fully connected sublayer \"\"\"\n",
-    "    def __init__(self, d1, d2):\n",
-    "        super(FCLayer, self).__init__()\n",
-    "        # Dimensionality of the first hidden layer\n",
-    "        self.d1 = d1\n",
-    "        # Dimensionality of the second hidden layer\n",
-    "        self.d2 = d2\n",
-    "    \n",
-    "    def build(self, input_shape):\n",
-    "        # First layer's weights and biases\n",
-    "        self.W1 = self.add_weight(\n",
-    "            shape=(input_shape[-1], self.d1), initializer='glorot_uniform',\n",
-    "            trainable=True, dtype='float32'\n",
-    "        )\n",
-    "        self.b1 = self.add_weight(\n",
-    "            shape=(self.d1,), initializer='glorot_uniform',\n",
-    "            trainable=True, dtype='float32'\n",
-    "        )        \n",
-    "        # Second layer's weights and biases\n",
-    "        self.W2 = self.add_weight(\n",
-    "            shape=(input_shape[-1], self.d2), initializer='glorot_uniform',\n",
-    "            trainable=True, dtype='float32'\n",
-    "        )\n",
-    "        self.b2 = self.add_weight(\n",
-    "            shape=(self.d2,), initializer='glorot_uniform',\n",
-    "            trainable=True, dtype='float32'\n",
-    "        )  \n",
-    "    \n",
-    "    def call(self, x):\n",
-    "        # Computing the first fully connected output\n",
-    "        ff1 = tf.nn.relu(tf.matmul(x,self.W1)+self.b1)\n",
-    "        # Computing the second fully connected output\n",
-    "        # Note that the second layer doesn't use an activation\n",
-    "        ff2 = tf.matmul(x,self.W2)+self.b2\n",
-    "        return ff2\n",
-    "    \n",
-    "# Creating a dummy fully connected layer\n",
-    "ff = FCLayer(2048, 512)(h)\n",
-    "print(ff.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Defining a SelfAttention layer with Masking Capability\n",
     "\n",
     "The decoder model uses a special type of attention layer. This attention layer masks any words ahead of the current word being processed. This in turn helps to avoid the decoder from seeing words it shouldn't during the training process."
@@ -297,7 +232,8 @@
     }
    ],
    "source": [
-    "# Code listing 3.8\n",
+    "# Section 5.2\n",
+    "# Code listing 5.2\n",
     "import tensorflow as tf\n",
     "\n",
     "class SelfAttentionLayer(layers.Layer):\n",
@@ -410,6 +346,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Defining the Fully-Connected Layer\n",
+    "\n",
+    "Now let's define the fully-connected sublayer found in the Transformer networks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 7, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Section 5.2\n",
+    "# Code listing 5.3\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "class FCLayer(layers.Layer):\n",
+    "    \"\"\" The computations of a fully connected sublayer \"\"\"\n",
+    "    def __init__(self, d1, d2):\n",
+    "        super(FCLayer, self).__init__()\n",
+    "        # Dimensionality of the first hidden layer\n",
+    "        self.d1 = d1\n",
+    "        # Dimensionality of the second hidden layer\n",
+    "        self.d2 = d2\n",
+    "    \n",
+    "    def build(self, input_shape):\n",
+    "        # First layer's weights and biases\n",
+    "        self.W1 = self.add_weight(\n",
+    "            shape=(input_shape[-1], self.d1), initializer='glorot_uniform',\n",
+    "            trainable=True, dtype='float32'\n",
+    "        )\n",
+    "        self.b1 = self.add_weight(\n",
+    "            shape=(self.d1,), initializer='glorot_uniform',\n",
+    "            trainable=True, dtype='float32'\n",
+    "        )        \n",
+    "        # Second layer's weights and biases\n",
+    "        self.W2 = self.add_weight(\n",
+    "            shape=(input_shape[-1], self.d2), initializer='glorot_uniform',\n",
+    "            trainable=True, dtype='float32'\n",
+    "        )\n",
+    "        self.b2 = self.add_weight(\n",
+    "            shape=(self.d2,), initializer='glorot_uniform',\n",
+    "            trainable=True, dtype='float32'\n",
+    "        )  \n",
+    "    \n",
+    "    def call(self, x):\n",
+    "        # Computing the first fully connected output\n",
+    "        ff1 = tf.nn.relu(tf.matmul(x,self.W1)+self.b1)\n",
+    "        # Computing the second fully connected output\n",
+    "        # Note that the second layer doesn't use an activation\n",
+    "        ff2 = tf.matmul(x,self.W2)+self.b2\n",
+    "        return ff2\n",
+    "    \n",
+    "# Creating a dummy fully connected layer\n",
+    "ff = FCLayer(2048, 512)(h)\n",
+    "print(ff.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Defining the Encoder Layer and the Decoder Layer\n",
     "\n",
     "With all the low-level details ironed out, let's define the encoder and decoder layers."
@@ -421,7 +426,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code listing 3.10\n",
+    "# Section 5.2\n",
+    "# Code listing 5.4\n",
+    "\n",
     "import tensorflow as tf\n",
     "\n",
     "class EncoderLayer(layers.Layer):\n",
@@ -455,7 +462,7 @@
     "        \n",
     "        return y\n",
     "\n",
-    "# Code listing 3.11\n",
+    "# Code listing 5.5\n",
     "class DecoderLayer(layers.Layer):\n",
     "    \"\"\" The decoder layer \"\"\"\n",
     "    def __init__(self, d, n_heads):\n",
@@ -536,7 +543,9 @@
     }
    ],
    "source": [
-    "# Code listing 3.12\n",
+    "# Section 5.2\n",
+    "# Code listing 5.6\n",
+    "\n",
     "import tensorflow as tf\n",
     "\n",
     "# Defining some hyperparameters\n",
