Added chapter titles and fixed mistack in colab url

--- a/Ch03/3.2.Creating_Input_Pipelines.ipynb
+++ b/Ch03/3.2.Creating_Input_Pipelines.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data retrieval and processing in TensorFlow and Keras"
+    "# Chapter 3: Keras and Data Retrieval in TensorFlow 2"
    ]
   },
   {
