--- a/Ch04/4.1.Fully_connected_networks.ipynb
+++ b/Ch04/4.1.Fully_connected_networks.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fully-Connected Neural Networks\n",
+    "# Chapter 4: Dipping Toes in Deep Learning\n",
+    "\n",
+    "## Fully-Connected Neural Networks\n",
     "\n",
     "We have already discussed a type of fully-connected neural network (i.e. multi-layer perceptron) in Chapter 1. In this chapter we will learn about a new type of fully-connected neural network; an *autoencoder* model. An autoencoder is primarly used to be trained in an unsupervised fashion. This means the model can be trained just using inputs, and no labels. \n",
     "\n",
