--- a/Ch04/4.2.Convolution_networks.ipynb
+++ b/Ch04/4.2.Convolution_networks.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convolution Neural Networks\n",
+    "# Chapter 4: Dipping Toes in Deep Learning\n",
+    "\n",
+    "## Convolution Neural Networks\n",
     "\n",
     "Convolution neural networks (CNNs) have gained unparalleled popularity in computer vision tasks. A convolution neural network consists of several important components, such as,\n",
     "\n",
