--- a/Ch04/4.3.Recurrent_networks.ipynb
+++ b/Ch04/4.3.Recurrent_networks.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recurrent Neural Networks\n",
+    "# Chapter 4: Dipping Toes in Deep Learning\n",
+    "\n",
+    "## Recurrent Neural Networks\n",
     "\n",
     "Recurrent neural networks (RNNs) have proven their success in learning from time-series data.\n",
     "\n",
