--- a/Ch02/2.1.Tensorflow_Fundamentals.ipynb
+++ b/Ch02/2.1.Tensorflow_Fundamentals.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "<table align=\"left\">\n",
     "    <td>\n",
-    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch02/1.Tensorflow_Fundamentals.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch02/2.1.Tensorflow_Fundamentals.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
     "    </td>\n",
     "</table>"
    ]
