--- a/Ch03/3.1.Keras_APIs.ipynb
+++ b/Ch03/3.1.Keras_APIs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 2: TensorFlow 2.0"
+    "# Chapter 3: Keras and Data Retrieval in TensorFlow 2"
    ]
   },
   {
