--- a/Ch06/6.1.Image_Classification.ipynb
+++ b/Ch06/6.1.Image_Classification.ipynb
@@ -355,7 +355,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How many training instances for each class are there?"
+    "## How many training instances for each class are there?\n",
+    "\n",
+    "**Note**: If you run this after separating out the validation data, you'll see 450 instead of 500 in the `n_train` column."
    ]
   },
   {
