Fixed architecture ch06

--- a/Ch06/6.1.Image_Classification.ipynb
+++ b/Ch06/6.1.Image_Classification.ipynb
@@ -932,17 +932,18 @@
     "\n",
     "def get_train_valid_test_data_generators(batch_size):\n",
     "    # Define a Keras ImageDataGenerator with image centering (subtract mean)\n",
+    "    target_size = (56, 56)\n",
     "    image_gen = ImageDataGenerator(samplewise_center=True)\n",
     "\n",
     "    # Define a training data generator\n",
     "    train_gen = image_gen.flow_from_directory(\n",
-    "        os.path.join('data','tiny-imagenet-200', 'train'), target_size=(64, 64), classes=None,\n",
+    "        os.path.join('data','tiny-imagenet-200', 'train'), target_size=target_size, classes=None,\n",
     "        class_mode='categorical', batch_size=batch_size, shuffle=True, seed=random_seed\n",
     "    )\n",
     "    \n",
     "    # Define a validation data generator\n",
     "    valid_gen = image_gen.flow_from_directory(\n",
-    "        os.path.join('data','tiny-imagenet-200',  'train_val'), target_size=(64, 64), classes=None,\n",
+    "        os.path.join('data','tiny-imagenet-200',  'train_val'), target_size=target_size, classes=None,\n",
     "        class_mode='categorical', batch_size=batch_size, shuffle=False, seed=random_seed\n",
     "    )\n",
     "    \n",
@@ -950,7 +951,7 @@
     "    # This function uses flow_from_dataframe instead of flow_from_directory\n",
     "    test_df = get_test_labels_df(os.path.join('data','tiny-imagenet-200',  'val', 'val_annotations.txt'))\n",
     "    test_gen = image_gen.flow_from_dataframe(\n",
-    "        test_df, directory=os.path.join('data','tiny-imagenet-200',  'val', 'images'), target_size=(64, 64), classes=None,\n",
+    "        test_df, directory=os.path.join('data','tiny-imagenet-200',  'val', 'images'), target_size=target_size, classes=None,\n",
     "        class_mode='categorical', batch_size=batch_size, shuffle=False\n",
     "    )\n",
     "    return train_gen, valid_gen, test_gen\n",
@@ -1017,7 +1018,7 @@
     "    return out\n",
     "\n",
     "def aux_out(inp,name=None):    \n",
-    "    avgpool1 = AvgPool2D((5,5), strides=(1,1), padding='same')(inp)\n",
+    "    avgpool1 = AvgPool2D((5,5), strides=(3,3), padding='valid')(inp)\n",
     "    conv1 = Conv2D(128, (1,1), activation='relu', padding='same')(avgpool1)\n",
     "    flat = Flatten()(conv1)\n",
     "    dense1 = Dense(1024, activation='relu')(flat)    \n",
@@ -1025,14 +1026,15 @@
     "    return aux_out\n",
     "\n",
     "def stem(inp):\n",
-    "    conv1 = Conv2D(64, (7,7), strides=(2,2), activation='relu', padding='same')(inp)\n",
-    "    lrn1 = Lambda(lambda x: tf.nn.local_response_normalization(x))(conv1)\n",
+    "    conv1 = Conv2D(64, (7,7), strides=(1,1), activation='relu', padding='same')(inp)\n",
+    "    maxpool2 = MaxPool2D((3,3), strides=(2,2), padding='same')(conv1)\n",
+    "    lrn3 = Lambda(lambda x: tf.nn.local_response_normalization(x))(maxpool2)\n",
     "\n",
-    "    conv2 = Conv2D(64, (1,1), strides=(1,1), padding='same')(lrn1)\n",
-    "    conv3 = Conv2D(192, (3,3), strides=(1,1), activation='relu', padding='same')(conv2)\n",
-    "    lrn2 = Lambda(lambda x: tf.nn.local_response_normalization(x))(conv3)\n",
+    "    conv4 = Conv2D(64, (1,1), strides=(1,1), padding='same')(lrn3)\n",
+    "    conv5 = Conv2D(192, (3,3), strides=(1,1), activation='relu', padding='same')(conv4)\n",
+    "    lrn6 = Lambda(lambda x: tf.nn.local_response_normalization(x))(conv5)\n",
     "\n",
-    "    maxpool = MaxPool2D((3,3), strides=(2,2), padding='same')(lrn2)\n",
+    "    maxpool7 = MaxPool2D((3,3), strides=(2,2), padding='same')(lrn6)\n",
     "\n",
     "    return maxpool\n"
    ]
@@ -1282,7 +1284,7 @@
     "    \n",
     "    K.clear_session()\n",
     "    \n",
-    "    inp = Input(shape=(64,64,3))\n",
+    "    inp = Input(shape=(56,56,3))\n",
     "    stem_out = stem(inp)\n",
     "    inc_3a = inception(stem_out, [(64,),(96,128),(16,32),(32,)])\n",
     "    inc_3b = inception(inc_3a, [(128,),(128,192),(32,96),(64,)])\n",
@@ -1297,12 +1299,14 @@
     "    inc_4c = inception(inc_4b, [(128,),(128,256),(24,64),(64,)])\n",
     "    inc_4d = inception(inc_4c, [(112,),(144,288),(32,64),(64,)])\n",
     "    inc_4e = inception(inc_4d, [(256,),(160,320),(32,128),(128,)])\n",
-    "\n",
+    "    \n",
+    "    maxpool = MaxPool2D((3,3), strides=(2,2), padding='same')(inc_4e)\n",
+    "    \n",
     "    aux_out2 = aux_out(inc_4d, name='aux2')\n",
     "\n",
-    "    inc_5a = inception(inc_4e, [(256,),(160,320),(32,128),(128,)])\n",
+    "    inc_5a = inception(maxpool, [(256,),(160,320),(32,128),(128,)])\n",
     "    inc_5b = inception(inc_5a, [(384,),(192,384),(48,128),(128,)])\n",
-    "    avgpool1 = AvgPool2D((8,8), strides=(1,1), padding='valid')(inc_5b)\n",
+    "    avgpool1 = AvgPool2D((7,7), strides=(1,1), padding='valid')(inc_5b)\n",
     "\n",
     "    flat_out = Flatten()(avgpool1)\n",
     "    out_main = Dense(200, activation='softmax', name='final')(flat_out)\n",
